--- a/sw-gestao-ecommerce/package.json
+++ b/sw-gestao-ecommerce/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "formik": "^2.4.6",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
