--- a/sw-gestao-ecommerce/package.json
+++ b/sw-gestao-ecommerce/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/font": "^14.2.5",
     "formik": "^2.4.6",
-    "next": "14.2.5",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.5",
