--- a/sw-gestao-ecommerce/tsconfig.json
+++ b/sw-gestao-ecommerce/tsconfig.json
@@ -17,10 +17,19 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./src", // Define a base URL
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["*"] // Ajuste para permitir o uso do alias @/
+    },
+    "types": ["tailwindcss"],
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/MenuLoja.tsx"],
+  "include": [
+    "next-env.d.ts", 
+    "src/**/*.ts", 
+    "src/**/*.tsx", // Inclui todos os arquivos TypeScript em src
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
+
