--- a/sw-gestao-ecommerce/package.json
+++ b/sw-gestao-ecommerce/package.json
@@ -9,22 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "formik": "^2.4.6",
+    "@next/font": "^14.2.5",
     "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.5",
-    "yup": "^1.4.0"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "^0.2.4",
     "postcss": "^8",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
