--- a/sw-gestao-ecommerce/package.json
+++ b/sw-gestao-ecommerce/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.5",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "next": "^14.2.15",
     "react": "^18",
